# TeleWebManager

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/endpoints/: users.py
backend/app/core/: logger.py  security.py  settings.py
backend/app/db/: base.py  base_crud.py  crud_user.py  session.py
backend/app/models/: user_models.py
backend/app/schemas/: user_schemas.py
bots/: Dockerfile
bots/admin_bot/: bot.py  pyproject.toml
bots/common/: api_client.py  logger.py  models.py  settings.py
bots/production_bot/: bot.py  pyproject.toml
web_servers/production_server/: index.html
web_servers/qa_server/: index.html
