[tool.poetry]
name = "admin-bot"
version = "0.1.0"
description = ""
authors = ["poligrafo <poligrafo888@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^21.6"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
